--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,8 @@
       rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <base href="{{ baseHref }}">
   </head>
   <body>
     <app-root></app-root>
